test/expected/multiline_echo_expansion.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "word*"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "word*"
]
shit: 2:1: error: No matches for the glob pattern 'word*'.
     2 |  word*
       |  ^~~~~ here.
